# Portfolio

./: Buscaminas_en_consola.py  Generador_dibujos.py  README.md
Algorithms_and_data_structures_1/: README.md
Algoritmos_1/: Generador_dibujos.py
Challenges/Challenge_2/: ej_1.txt  ej_2.py  ej_3.py
Javascript_Certification_FCC/: caesar_cipher.js  cash_register.js  palindrome.js  roman_numeral_converter.js  telephone_number_validation.js
Projects/: README.md
RPA_Blue_Prism/: Create Orders Completed - Mariano Guastella.bprelease  README.md
Studies/Algorithms_and_data_structures_1/: README.md
Studies/Operating_systems/: README.md
University/: README.md
University/Algorithms_and_data_structures_1/: Buscaminas_en_consola.py  Generador_tweets.py  README.txt
University/Algorithms_and_data_structures_3/assignment_1/: CMakeLists.txt
University/Algorithms_and_data_structures_3/assignment_1/instancias/densidad-alta/: ALTA-10.txt  ALTA-101.txt  ALTA-102.txt  ALTA-103.txt  ALTA-104.txt  ALTA-108.txt  ALTA-109.txt  ALTA-111.txt  ALTA-113.txt  ALTA-114.txt  ALTA-115.txt  ALTA-116.txt  ALTA-118.txt  ALTA-122.txt  ALTA-125.txt  ALTA-129.txt  ALTA-130.txt  ALTA-131.txt  ALTA-133.txt  ALTA-135.txt  ALTA-136.txt  ALTA-14.txt  ALTA-140.txt  ALTA-141.txt  ALTA-143.txt  ALTA-144.txt  ALTA-146.txt  ALTA-149.txt  ALTA-150.txt  ALTA-152.txt  ALTA-153.txt  ALTA-155.txt  ALTA-156.txt  ALTA-158.txt  ALTA-163.txt  ALTA-164.txt  ALTA-165.txt  ALTA-167.txt  ALTA-168.txt  ALTA-17.txt  (+56 more)
University/Algorithms_and_data_structures_3/assignment_1/src/: main.cpp  main.h
(+234 files in other folders)
